--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "author": "Olivier C",
   "dependencies": {
+    "@mikewesthad/dungeon": "^2.0.1",
     "canvas": "^2.7.0",
     "datauri": "^1.1.0",
     "express": "^4.17.1",
